--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: npm ci
+      #- run: npm ci
       # or one-off:
       #- run: npm install execa
       - uses: actions/github-script@v7
