--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -164,11 +164,14 @@ jobs:
       - uses: actions/checkout@v4  
 
        # 安装 Inno Setup 编译器
+      - name: Download Inno Setup
+        run: |
+          Invoke-WebRequest -Uri 'https://files.jrsoftware.org/is/6/innosetup-6.2.2.exe' -OutFile 'innosetup-6.2.2.exe'
+     
       - name: Install Inno Setup
         run: |
-          wget https://files.jrsoftware.org/is/6/innosetup-6.2.2.exe
-          .\innosetup-6.2.2.exe /SILENT
-
+          Start-Process -FilePath 'innosetup-6.2.2.exe' -ArgumentList '/SILENT' -Wait
+     
      # 运行 Inno Setup 编译器命令，例如打印版本号
       - name: Check Inno Setup version
         run: iscc /version
@@ -195,7 +198,7 @@ jobs:
         run: flutter build windows  
 
       - name: Inno Setup
-        run: iscc install/buildWindowsExe.iss  
+        run: iscc /Q /OOutputLog.txt install/buildWindowsExe.iss  
  
       - name: Upload Windows exe to Release  
         id: upload-exe-release-asset  
