--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -198,7 +198,12 @@ jobs:
         run: flutter build windows  
 
       - name: Inno Setup
-        run: iscc /build/windows/install /OOutputLog.txt install/builderWindowsExe.iss  
+        run: iscc install/builderWindowsExe.iss  
+
+      - name: Zip Folder
+        run: |
+          cd build/windows/x64/runner/Release
+          zip -r windwos.zip .
  
       - name: Upload Windows exe to Release  
         id: upload-exe-release-asset  
@@ -207,9 +212,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
           upload_url: ${{ needs.create_release.outputs.result_url }}  
-          asset_path: ./build/windows/install/*
-          asset_name: windows-${{ needs.create_release.outputs.result_version }}.exe
-          asset_content_type: application/octet-stream 
+          asset_path: ./build/windows/x64/runner/Release/windwos.zip
+          asset_name: windows-${{ needs.create_release.outputs.result_version }}.zip
+          asset_content_type: application/zip
             
   
 
