--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -170,7 +170,8 @@ jobs:
             const fs = require('fs');
             const path = './install/builderWindowsExe.iss';
             let scriptContent = fs.readFileSync(path, 'utf8');
-            scriptContent = scriptContent.replace(/AppVersion=.*$/m, `AppVersion=${{ needs.create_release.outputs.result_version }}.substring(1)`);
+            const version = ${{ needs.create_release.outputs.result_version }}.substring(1);
+            scriptContent = scriptContent.replace(/AppVersion=.*$/m, `AppVersion=${version}`);
             fs.writeFileSync(path, scriptContent);
 
       # 下载 Inno Setup
