--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,11 @@ dependencies:
   rxdart: ^0.27.7
   retrofit: ^4.1.0
   json_annotation: ^4.8.1
-  logger: ^2.1.0
-  flutter_riverpod: ^2.4.10
+  logger: ^2.2.0
+  flutter_riverpod: ^2.5.1
+  go_router: ^13.2.1
+  intl: ^0.19.0
+  flutter_adaptive_scaffold: ^0.1.10+1
 
 dev_dependencies:
   flutter_test:
