--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   go_router: ^13.2.1
   intl: ^0.19.0
   flutter_adaptive_scaffold: ^0.1.10+1
+  image_picker: ^1.0.7
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
