--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,16 @@ dependencies:
   flutter_adaptive_scaffold: ^0.1.10+1
   image_picker: ^1.0.7
   mime: ^1.0.5
+  google_mlkit_selfie_segmentation: ^0.6.0
+  camera: ^0.10.5+9
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.1
+  flutter_image: ^4.1.11
+  google_mlkit_face_detection: ^0.9.0
+  subject_segmentation:
+    path: D:\Android\project\FlutterProject\plugin\subject_segmentation
+  google_mlkit_subject_segmentation:
+    path: D:\Android\project\FlutterProject\plugin\google_ml_kit_flutter\packages\google_mlkit_subject_segmentation
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +82,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
